--- a/introduction.html
+++ b/introduction.html
@@ -351,7 +351,7 @@ title="Print to PDF"
     <div class="footer-content row">
         <footer class="col footer"><p>
   
-    By MML Group<br/>
+    By <a href="https://mml.ikim.nrw">MML Group</a><br/>
   
       &copy; Copyright 2022.<br/>
     <div class="extra_footer">
