--- a/search.html
+++ b/search.html
@@ -299,7 +299,7 @@ title="Fullscreen mode"
     <div class="footer-content row">
         <footer class="col footer"><p>
   
-    By MML Group<br/>
+    By <a href="https://mml.ikim.nrw">MML Group</a><br/>
   
       &copy; Copyright 2022.<br/>
     <div class="extra_footer">
